--- a/Front/src/app/dashboard/datospersonales/datospersonales.component.html
+++ b/Front/src/app/dashboard/datospersonales/datospersonales.component.html
@@ -35,7 +35,7 @@
               <!-- Numero De Documento -->
               <mat-form-field class="form-group col-md-6 pl-1">
                 <mat-label>Numero De Documento</mat-label>
-                <input matInput formControlName="numdoc" type="number"
+                <input matInput formControlName="numdoc" type="text"
                   class="form-control" >
                 <mat-error *ngIf="campoEsValido('numdoc')">
                   {{getError('numdoc')}}
