--- a/Front/src/app/dashboard/misdatos/misdatos.component.html
+++ b/Front/src/app/dashboard/misdatos/misdatos.component.html
@@ -78,7 +78,7 @@
                             <div class="col-md-6 pl-1">
                                 <div class="form-group">
                                     <label>Número</label>
-                                    <input [(ngModel)]="numdoc" name="numdoc" type="number" class="form-control" placeholder="# de documento" required>
+                                    <input [(ngModel)]="numdoc" name="numdoc" type="text" class="form-control" placeholder="# de documento" required>
                                 </div>
                             </div>
                         </div>
