--- a/Front/src/app/landing/pages/quick-forms/quick-forms.component.html
+++ b/Front/src/app/landing/pages/quick-forms/quick-forms.component.html
@@ -36,7 +36,7 @@
                 <!-- Numero De Documento -->
                 <mat-form-field class="form-group col-md-6 pl-1">
                   <mat-label>Numero De Documento</mat-label>
-                  <input matInput formControlName="numdoc" type="number"
+                  <input matInput formControlName="numdoc" type="text"
                     class="form-control">
                   <mat-error *ngIf="campoEsValido('numdoc')">
                     {{getError('numdoc')}}
@@ -71,7 +71,7 @@
                 <mat-form-field class="form-group col-md-4 pl-1">
                   <mat-label>Ciudad</mat-label>
                   <input matInput formControlName="ciudad" type="text"
-                    class="form-control">
+                    class="form-control" (keyup)="cambios('ciudad')">
                   <mat-error *ngIf="campoEsValido('ciudad')">
                     {{getError('ciudad')}}
                   </mat-error>
@@ -84,7 +84,7 @@
                 <mat-form-field class="form-group col-md-4 pl-1">
                   <mat-label>Dirección</mat-label>
                   <input matInput formControlName="direccion" type="text"
-                    class="form-control">
+                    class="form-control" (keyup)="cambios('direccion')">
                   <mat-error *ngIf="campoEsValido('direccion')">
                     {{getError('direccion')}}
                   </mat-error>
