--- a/Front/src/app/dashboard/estadocuenta/estadocuenta.component.html
+++ b/Front/src/app/dashboard/estadocuenta/estadocuenta.component.html
@@ -27,7 +27,7 @@
               <div class="accordion_display">
                 <div class="accordion_size">
                   <mat-accordion multi="true">
-                    <mat-expansion-panel [expanded]="false" hiddenToggle="false">
+                    <mat-expansion-panel [expanded]="expand" hiddenToggle="false">
                       <mat-expansion-panel-header class="s">
                         <mat-panel-title class="row">
 
